force-app/main/default/objects/AAR_Startup__c/AAR_Startup__c.object-meta.xml
<CustomObject>
    <label>Startup Company</label>
    <nameField>
        <displayFormat>STR-{0000}</displayFormat>
        <label>Startup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Startup Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>