force-app/main/default/objects/AAR_Startup__c/fields/Founded_Date__c.field-meta.xml
<CustomField>
    <fullName>Founded_Date__c</fullName>
    <label>Founded Date</label>
    <type>Date</type>
</CustomField>