force-app/main/default/objects/AAR_Startup__c/fields/Scientist_Role__c.field-meta.xml
<CustomField>
    <fullName>Scientist_Role__c</fullName>
    <label>Scientist Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Founder</fullName><default>false</default><label
        >Founder</label></value>
            <value><fullName>Co-Founder</fullName><default>false</default><label
        >Co-Founder</label></value>
            <value><fullName>Scientific Advisor</fullName><default
        >false</default><label>Scientific Advisor</label></value>
            <value><fullName>Board Member</fullName><default
        >false</default><label>Board Member</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>